Bug 1954129 - wasm: Fix hash map lookups for Code to be read-only. r=yury

StackMaps, CallSites, and TrapSites all have hash maps on them. These are
used from multiple different threads at the same time, which can lead to
assertions in ReentrancyGuard. This is safe, because all of these classes
are actually read-only after they are constructed and lookups start
happening. Switch to a readOnlyThreadSafeLookup instead. This only
effects debug builds.

Differential Revision: https://phabricator.services.mozilla.com/D241642